# DependentTypeElaboration

./: .gitignore  CHANGELOG.md  Dt-Elab.cabal  Readme.md  qaq.txt  qaq.txt~
app/: ApplicativeParser.hs  DbiClosure.hs  DtTyCkDbi.hs  DtTyCkNames.hs  EvalHOAS.hs  Main.hs  ParserScratch.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
