cabal-version:      3.6
name:               Dt-Elab
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             cloudifold
maintainer:         cloudifold.3125@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Dt-Elab
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: EvalHOAS, DbiClosure, DtTyCkNames, ParserScratch

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0, flatparse, megaparsec
    hs-source-dirs:   app
    default-language: Haskell2010
